samples/_failures_safe/1761045102_02db28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b024fb4.c: In function ‘main’:
./samples/SAFE/__tmp_6b024fb4.c:156:25: error: expected ‘;’ at end of input
  156 |                 return 1
      |                         ^
      |                         ;
./samples/SAFE/__tmp_6b024fb4.c:156:17: error: expected declaration or statement at end of input
  156 |                 return 1
      |                 ^~~~~~
./samples/SAFE/__tmp_6b024fb4.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b024fb4.c:156:17: error: expected declaration or statement at end of input
